--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps = flake8
 commands = flake8 revisiondict
 
 [testenv]
+passenv=CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
@@ -23,6 +24,5 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
-
-
+    py.test --basetemp={envtmpdir} --doctest-modules
+    codecov
