--- a/tox.ini
+++ b/tox.ini
@@ -24,5 +24,5 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir} --doctest-modules --cov=./
+    py.test --basetemp={envtmpdir} --doctest-modules --cov=revisiondict
     codecov
