fixing flake8 compatibility

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,9 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+exclude =
+    docs,
+    tests
 
 [aliases]
 test = pytest
