fixed linter for revisiondict

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,19 @@
 [tox]
-envlist = py27, py34, py35, py36, flake8
+envlist = py27, py34, py35, py36, lint
 
 [travis]
 python =
-    3.6: py36
-    3.5: py35
-    3.4: py34
-    2.7: py27
+    3.6: py36, lint
+    3.5: py35, lint
+    3.4: py34, lint
+    2.7: py27, lint
 
-[testenv:flake8]
+[testenv:lint]
 basepython = python
-deps = flake8
-commands = flake8 revisiondict
+deps = -rrequirements_dev.txt
+commands =
+    flake8
+    rstcheck README.rst
 
 [testenv]
 passenv=CI TRAVIS TRAVIS_*
