narrow flake8 down to revisiondict

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
 basepython = python
 deps = -rrequirements_dev.txt
 commands =
-    flake8
+    flake8 revisiondict
     rstcheck README.rst
 
 [testenv]
