rework directory layout

--- a/tox.ini
+++ b/tox.ini
@@ -15,16 +15,14 @@ commands =
     flake8 revisiondict
     rstcheck README.rst
 
+
 [testenv]
 passenv=CI TRAVIS TRAVIS_*
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
 commands =
-    pip install -U pip
-    py.test --basetemp={envtmpdir} --doctest-modules --cov=revisiondict --ignore=tests/util_mapping_py2.py --ignore=tests/util_mapping_py3.py
-    codecov
+    pytest
+    codecoV
+    
