--- a/setup.cfg
+++ b/setup.cfg
@@ -15,14 +15,11 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = 
-	docs,
-	tests
-
-[aliases]
-test = pytest
+exclude = .eggs,.git,.pycache,.env,test
 
 [tool:pytest]
-collect_ignore = ['setup.py']
-addopts = --doctest-modules
+testpaths = test/test_revisiondict.py
+doctest_optionflags = ELLIPSIS
+addopts = --cov-report=html --cov-report=term-missing --cov=revisiondict --doctest-modules
 
+[rstcheck]
