fixed misconfiguration in setup.cfg and tox.ini

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,7 @@ universal = 1
 exclude = .eggs,.git,.pycache,.env,test
 
 [tool:pytest]
-testpaths = test/test_revisiondict.py
+testpaths = test/test_revisiondict.py revisiondict
 doctest_optionflags = ELLIPSIS
 addopts = --cov-report=html --cov-report=term-missing --cov=revisiondict --doctest-modules
 
