fixed python versions and revisiondict version to 1.0.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
-envlist = py27, py34, py35, py36, lint
+envlist = py27, py34, py35, py36, py37, py38, lint
 
 [travis]
 python =
+    3.8: py38, lint
+    3.7: py37, lint
     3.6: py36, lint
     3.5: py35, lint
     3.4: py34, lint
-    2.7: py27, lint
 
 [testenv:lint]
 basepython = python
@@ -24,4 +25,3 @@ deps =
 commands =
     pytest
     codecov
-    
