--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py34, py35, py36, py37, py38, lint
+envlist = py35, py36, py37, py38, lint
 
 [travis]
 python =
@@ -7,7 +7,6 @@ python =
     3.7: py37, lint
     3.6: py36, lint
     3.5: py35, lint
-    3.4: py34, lint
 
 [testenv:lint]
 basepython = python
