add unique_revisiondict and update CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,26 +1,22 @@
-[bumpversion]
-current_version = 1.0.0
-commit = True
-tag = True
-
-[bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
-[bumpversion:file:revisiondict/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
-
 [bdist_wheel]
 universal = 1
 
-[flake8]
-exclude = .eggs,.git,.pycache,.env,test
+[coverage:run]
+branch = True
+
+[coverage:report]
+precision = 1
+exclude_lines =
+	if TYPE_CHECKING:
 
 [tool:pytest]
-testpaths = test/test_revisiondict.py revisiondict
+testpaths = tests revisiondict README.rst
 doctest_optionflags = ELLIPSIS
-addopts = --cov-report=html --cov-report=term-missing --cov=revisiondict --doctest-modules
+addopts = --cov-report=html --no-cov-on-fail -q --cov=revisiondict
 
-[rstcheck]
-
+[pylama]
+async = 1
+format = pycodestyle
+paths = revisiondict
+skip = revisiondict/_version.py
+linters = pycodestyle,mccabe,pylint
