--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,9 +1,14 @@
-pip==23.3
-bumpversion==0.6.0
-flake8==3.8.3
-tox==3.16.1
-codecov==2.1.7
-rstcheck==3.3.1
-pytest==5.4.3
-pytest-cov==2.10.0
-attrs==19.3.0
+pytest==7.1.3
+pytest-asyncio==0.19.0
+pytest-cov==4.0.0
+tox==2.9.1
+Sphinx==1.7.8
+sphinx-rtd-theme==0.4.0
+sphinx-autodoc-typehints==1.3.0
+flake8==3.7.9
+mypy==0.790
+rstcheck==6.1.0
+setuptools_scm==3.3.3
+wheel==0.35.1
+pylama==7.7.1
+pylint==2.15.3
